about page horizontal scroll fix

--- a/src/scss/components/sidebar.scss
+++ b/src/scss/components/sidebar.scss
@@ -20,7 +20,7 @@
     z-index: -1;
     top: 0;
     left: 50%;
-    min-width: 108.333%;
+    min-width: 100%;
 
     height: 100%;
     content: ' ';
